--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -736,17 +736,26 @@
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
+  .h-50 {
+    height: calc(var(--spacing) * 50);
+  }
   .h-56 {
     height: calc(var(--spacing) * 56);
   }
   .h-60 {
     height: calc(var(--spacing) * 60);
   }
+  .h-65 {
+    height: calc(var(--spacing) * 65);
+  }
   .h-70 {
     height: calc(var(--spacing) * 70);
   }
   .h-76 {
     height: calc(var(--spacing) * 76);
+  }
+  .h-80 {
+    height: calc(var(--spacing) * 80);
   }
   .h-90 {
     height: calc(var(--spacing) * 90);
