--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -832,6 +832,9 @@
   .max-w-6xl {
     max-width: var(--container-6xl);
   }
+  .max-w-7xl {
+    max-width: var(--container-7xl);
+  }
   .max-w-36 {
     max-width: calc(var(--spacing) * 36);
   }
@@ -840,9 +843,6 @@
   }
   .max-w-76 {
     max-width: calc(var(--spacing) * 76);
-  }
-  .max-w-7xl {
-    max-width: var(--container-7xl);
   }
   .max-w-86 {
     max-width: calc(var(--spacing) * 86);
@@ -1543,6 +1543,12 @@
   .xl\:ml-52 {
     @media (width >= 80rem) {
       margin-left: calc(var(--spacing) * 52);
+    }
+  }
+  .xl\:text-2xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .rtl\:rotate-180 {
