--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -736,17 +736,26 @@
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
+  .h-50 {
+    height: calc(var(--spacing) * 50);
+  }
   .h-56 {
     height: calc(var(--spacing) * 56);
   }
   .h-60 {
     height: calc(var(--spacing) * 60);
   }
+  .h-65 {
+    height: calc(var(--spacing) * 65);
+  }
   .h-70 {
     height: calc(var(--spacing) * 70);
   }
   .h-76 {
     height: calc(var(--spacing) * 76);
+  }
+  .h-80 {
+    height: calc(var(--spacing) * 80);
   }
   .h-90 {
     height: calc(var(--spacing) * 90);
@@ -823,6 +832,9 @@
   .max-w-6xl {
     max-width: var(--container-6xl);
   }
+  .max-w-7xl {
+    max-width: var(--container-7xl);
+  }
   .max-w-36 {
     max-width: calc(var(--spacing) * 36);
   }
@@ -831,9 +843,6 @@
   }
   .max-w-76 {
     max-width: calc(var(--spacing) * 76);
-  }
-  .max-w-7xl {
-    max-width: var(--container-7xl);
   }
   .max-w-86 {
     max-width: calc(var(--spacing) * 86);
@@ -1534,6 +1543,12 @@
   .xl\:ml-52 {
     @media (width >= 80rem) {
       margin-left: calc(var(--spacing) * 52);
+    }
+  }
+  .xl\:text-2xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .rtl\:rotate-180 {
