--- a/src/input.css
+++ b/src/input.css
@@ -6,8 +6,5 @@
   --color-tahiti: #3ab7bf;
   --color-bermuda: #78dcca;
 
-  --breakpoint-md: 48rem;
-    --breakpoint-lg: 64rem;
-    --breakpoint-xl: 80rem;
-    --breakpoint-2xl: 96rem;
+  --breakpoint-md: initial;
 }
